Modify: jpg 이미지 허용 input 수정

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </label>
   <br>
   <label class="file-input-label"> JPG, JPGE 이미지만 허용 (accept=".jpg .jpeg")<br>
-    <input type="file" accept=".jpg .jpeg">
+    <input type="file" accept=".jpg, .jpeg">
   </label>
   <br>
   <label class="file-input-label"> 모든 파일 허용 (accept="*")<br>
